--- a/configurations/environment_variables.conf
+++ b/configurations/environment_variables.conf
@@ -1,27 +1,14 @@
 [SERVICE]
 host = 0.0.0.0
-port = 9238
+port = 9239
 environment = dev
-api_rate_limit = 5/1second
-cookie_max_age = 60
-
-[MYSQL_DB]
-database = ccf_audit_information_dev
-port = 3306
-user = devcc
-password=arn:aws:secretsmanager:us-east-1:601045861829:secret:devcc-AFQK7P
-host=bdpodrds-cluster-2-cluster.cyaljwylszhg.us-east-1.rds.amazonaws.com
-
-[PSQL_DB]
-database = postgres
-port = 5432
-user = ilen
-password=ilens5432
-host=192.168.0.220
-schema: ut_adnoc_cp_poc
 
 [LOG]
 console_logging_enabled: True
 file_logging_enabled: True
 log_file_name: app.log
+
+[SQLite_DB]
+max_connections=5
+db_file=address_book.db
 
